objects/MDPERSONATOR__MD_expressEntryMap__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__cityField__c</fullName>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__countryField__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ctrySubdivision__c</fullName>
        <label>Country Subdivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__objectPrefix__c</fullName>
        <label>Object Prefix</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__postalField__c</fullName>
        <label>Postal Code/Zip</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__stateField__c</fullName>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__streetField__c</fullName>
        <label>Street</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Express Entry Map</label>
    <listViews>
        <fullName>MDPERSONATOR__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MD_expressEntryMaps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listware Express Entry Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>